<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.settings.Settings">

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:text="@string/innstillinger"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="264dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="@color/blanc"
        app:layout_constraintStart_toEndOf="@+id/tempText"
        app:layout_constraintTop_toBottomOf="@+id/settingsText" />

    <TextView
        android:id="@+id/tempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:text="@string/temperatur_enhet"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsText" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tempText"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/tempText">

        <RadioButton
            android:id="@+id/cel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsiusSettings"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/far"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheitSettings"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/kel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelvin"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </RadioGroup>

    <TextView
        android:id="@+id/UnitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="140dp"
        android:text="@string/m_leenhet"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempText" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/UnitText"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/UnitText">

        <RadioButton
            android:id="@+id/met"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metrisk"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/imp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imperisk"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/uk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eldet_uk"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>