<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.onboarding.screens.ThirdScreen">



    <Button
        android:id="@+id/previous_screen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="#00000000"
        android:text="@string/previous_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/next_screen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="#00000000"
        android:text="@string/skip_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/onboard_background"
        android:scaleType="fitEnd"
        android:contentDescription="@string/wave_graphic"

        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/Onboard_heading_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/onboard_header_third"
        android:textSize="30sp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/Onboard_desc_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:text="@string/onboard_desc_third"
        android:textSize="20sp"
        android:paddingRight="60dp"
        android:paddingLeft="60dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toTopOf="@id/Onboard_heading_3"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>