<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.onboarding.screens.FirstScreen">

    <Button
        android:id="@+id/next_screen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="#00000000"
        android:text="@string/next_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"

        android:src="@drawable/onboard_background"
        android:contentDescription="@string/wave_graphic"

        app:layout_constraintBottom_toBottomOf="parent"
        />


    <TextView
        android:id="@+id/Onboard_heading_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/onboard_header_first"
        android:textSize="30sp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/Onboard_desc_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/onboard_desc_first"
        android:textSize="20sp"
        android:paddingRight="60dp"
        android:paddingLeft="60dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toTopOf="@id/Onboard_heading_1"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>